--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.color-header {
+  background-color: rgb(92, 91, 91);
+  text-align: center;
+  color: #fdfffd;
+}
+.button-input {
+  outline: none;
+  text-align: center;
+  box-sizing: border-box;
+  border: 3px solid #ccc;
+}
+.background1 {
+  /* background: Orange; */
+  background-size: 100% 100%;
+}
+.background2 {
+  background: LightGray;
 }
